--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -12,6 +12,11 @@
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="com.anddoes.launcher.THEME" />
             </intent-filter>
+            <intent-filter>
+		<action android:name="android.intent.action.MAIN" />
+		<category android:name="android.intent.category.LAUNCHER" />
+		<category android:name="com.anddoes.launcher.THEME" />
+	    </intent-filter>
         </activity>
     </application>
 
